Title :  CustomAuthorizeFilter Improve
App : usermanagement - security

Branch : feature-Oath2

Version: 0.0.3

Date: 1399-01-20

Auther: pouya pouryaie

changes List:
- change application.properties and add application.permit.url for CustomAuthorizeFilter
- add AuthorizeFilterConfig and read application.permit.url from application.properties
- change CustomAuthorizeFilter for read AuthorizeFilterConfig list and check authorization

ToDo List:

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,6 +25,10 @@ application.jwt.tokenExpirationAfterMilliSecond=7200000
 
 application.basicRole.user = USER
 
+###################  permit url for custom filter Configuration ##########################
+
+application.permit.url =auth,oauth2,webjars,user
+
 ################### basic url Configuration ##########################
 
 application.basicUrl.home = http://localhost:8080/oauth/home
